--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -39,7 +39,6 @@
   "createAccountBtn": "Créer un compte",
   "accountCreatedMessage": "Compte créé avec succès !",
 
-
   "loginTitle": "Connectez-vous",
   "loginSubtitle": "Entrez vos identifiants pour vous connecter",
   "emailLabel": "Email",
@@ -50,11 +49,24 @@
   "invalidCredentials": "Email ou mot de passe incorrect.",
   "emailRequired": "L'email est requis.",
   "loginSuccess": "Connexion réussie !",
+  "loginFailed": "Connexion échouée. Vérifiez vos informations.",
 
-  "forgotPasswordTitle": "Réinitialiser votre mot de passe",
-  "forgotPasswordSubtitle": "Veuillez saisir l'adresse e-mail associée à votre compte et nous vous enverrons un lien pour réinitialiser votre mot de passe.",
-  "backToLogin": "Retour à la page de connexion",
-  "continueButton": "Continue",
+  "forgotPasswordTitle": "Mot de passe oublié ?",
+  "forgotPasswordSubtitle": "Entrez votre adresse e-mail pour recevoir un lien de réinitialisation.",
+  "continueButton": "Envoyer le lien",
   "resetLinkSent": "Lien de réinitialisation envoyé !",
-  "checkYourEmail": "Vérifiez votre boîte mail."
+  "checkYourEmail": "Veuillez vérifier votre boîte mail pour continuer.",
+
+  "resetPasswordTitle": "Créer un nouveau mot de passe",
+  "resetPasswordSubtitle": "Veuillez entrer le nouveau mot de passe",
+  "resetPasswordButton": "Modifier le mot de passe",
+
+  "passwordResetSuccessTitle": "Votre mot de passe a été modifié avec succès.",
+  "passwordTooShort": "Le mot de passe doit contenir au moins 6 caractères.",
+  "passwordConfirmRequired": "Veuillez confirmer votre mot de passe.",
+  "phoneRequired": "Le numéro de téléphone est requis.",
+  "phoneInvalid": "Numéro de téléphone invalide."
+
+
+
 }
